Scrollbar fixes

--- a/css/main.css
+++ b/css/main.css
@@ -269,7 +269,8 @@ blockquote {
 }
 
 ::-webkit-scrollbar {
-	/*background: transparent;*/
+	background: transparent;
+	width: 0;
 }
 
 /* Header
